si 섹션 문구 수정

--- a/index.html
+++ b/index.html
@@ -339,8 +339,8 @@
                                     <li><i class="ti-control-record"></i> QGroundControl 커스터마이징</li>
                                     <li><i class="ti-control-record"></i> 증강현실(AR) 기반 드론 제어, 모니터링 SW</li>
                                     <li><i class="ti-control-record"></i> AI 기반 드론 영상 분석 (이상탐지 등)</li>
-                                    <li><i class="ti-control-record"></i> 드론 모니터링 및 영상 수집, 판매 솔루션 - 'DUNI' 개발 및 보유중</li>
-                                    <li><i class="ti-control-record"></i> D社, T社(방위산업), P社(대기업), D社, A社(기타) 대상 SW 개발</li>
+                                    <li><i class="ti-control-record"></i> 드론 모니터링 및 영상 수집, 판매 솔루션 - 'DUNI' 개발 및 보유</li>
+                                    <li><i class="ti-control-record"></i> D社/T社(방위산업), P社(대기업), D社/A社(기타) 대상 SW 개발 등</li>
                                 </ul>
                             </div>
                         </div>
@@ -354,7 +354,7 @@
                                 <ul>
                                     <li><i class="ti-control-record"></i> Android, iOS 기반 AR 앱</li>
                                     <li><i class="ti-control-record"></i> three.js, aframe 활용 Web AR</li>
-                                    <li><i class="ti-control-record"></i> 전시/홍보/커뮤니케이션 솔루션 '<a href="https://home.aplx.link" target="_blank" style="color:cyan;">APLX</a>' 개발 및 보유중</li>
+                                    <li><i class="ti-control-record"></i> 전시/홍보/커뮤니케이션 솔루션 - '<a href="https://home.aplx.link" target="_blank" style="color:cyan;">APLX</a>' 개발 및 보유</li>
                                     <li><i class="ti-control-record"></i> 김미경 작가 - <a href="http://rooftopartist.com/works6" target="_blank" style="color:cyan;">산이 보이네</a>, 정은혜 작가 - <a href="https://m.blog.naver.com/jebo78/222857735219" target="_blank" style="color:cyan;">포옹전</a> 전시 적용 등</li>
                                     <li>&nbsp;</li>
                                     <li>&nbsp;</li>
@@ -383,7 +383,7 @@
                             <div class="feature-content">
                                 <h6><B>SW 개발</B></h6>
                                 <ul>
-                                    <li><i class="ti-control-record"></i> Android, iOS, Linux, Windows, Mac 등 각종 플랫폼용 SW, FW 개발</li>
+                                    <li><i class="ti-control-record"></i> Android, iOS, Linux, Windows, Mac 등 각종 플랫폼 SW, FW 개발</li>
                                     <li><i class="ti-control-record"></i> K社 - 디바이스 제어 앱, K社/D社 - FW 개발 등</li>
                                     <li>&nbsp;</li>                                    
                                 </ul>
