si 섹션 문구 수정

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                             <div class="feature-content">
                                 <h6><B>SW 개발</B></h6>
                                 <ul>
-                                    <li><i class="ti-control-record"></i> Android, iOS, Linux, Windows, Mac 등 각종 플랫폼 SW, FW 개발</li>
+                                    <li><i class="ti-control-record"></i> Android/iOS/Linux/Windows/Mac 등 각종 플랫폼 SW, FW 개발</li>
                                     <li><i class="ti-control-record"></i> K社 - 디바이스 제어 앱, K社/D社 - FW 개발 등</li>
                                     <li>&nbsp;</li>                                    
                                 </ul>
