--- a/index.html
+++ b/index.html
@@ -327,6 +327,11 @@
             data-overlay="0.45" id="section-si">            
             <div class="container">
                 <div class="row align-items-center">
+                    <div class="col-lg-12 m-auto text-left pt-5">
+                        <h5><b>System Integration</b></h5>
+                        <hr>
+                    </div>
+
                     <div class="col-lg-6 col-md-6">
                         <div class="icon-box icon-box-left">
                             <div class="feature-content">
