--- a/index.html
+++ b/index.html
@@ -104,9 +104,8 @@
                         <li><a href="https://blog.naver.com/PostList.naver?blogId=jebo78&categoryNo=38&from=postList" target="_blank"><span
                                     class="menu-item-span">BLOG</span></a>
                         </li>
-                        <li><a href="/recruit/index.html"><span class="menu-item-span">RECRUIT</span></a>
-                        </li>
-
+                        <li><a href="/recruit/index.html"><span class="menu-item-span">RECRUIT</span></a></li>
+                        <li><a href="#email-up"><span class="menu-item-span">CONTACT US</span></a></li>
                     </ul>
                 </div>
             </div>
@@ -1142,6 +1141,78 @@
         </section>
         <!-- Features end-->
 
+        <section class="module" id="email-up">
+            <div class="container">
+                <form role="form" method="post" id="email_up">
+                    <div class="row">
+                        <div class="col-lg-12 m-auto text-center pt-5">
+                            <h4><b>APLY에 문의하기</b></h4>
+                            <hr>
+                        </div>
+    
+                        <div class="col-lg-12">
+                            <div class="form-group">
+                                <div class="form-control" style="padding-bottom:.05rem;">
+                                    <div class="row">
+                                        <div class="col-lg-12 p-b-10"><label class="lab_check" for="">문의 내용</label>
+                                        </div>
+                                        <div class="col-lg-3 p-b-10"><input type="checkbox" id="min_type_1"
+                                                name="min_type_1" value="SW개발"><label class="lab_check"
+                                                for="min_type_1"><span class="checkbox"></span> 제휴 및 협업</label></div>
+                                        <div class="col-lg-3 p-b-10"><input type="checkbox" id="min_type_2"
+                                                name="min_type_2" value="데이터 분석"><label class="lab_check"
+                                                for="min_type_2"><span class="checkbox"></span> 서비스 관련</label></div>
+                                        <div class="col-lg-3 p-b-10"><input type="checkbox" id="min_type_3"
+                                                name="min_type_3" value="HW개발"><label class="lab_check"
+                                                for="min_type_3"><span class="checkbox"></span> SW 개발</label></div>
+                                        <div class="col-lg-3 p-b-10"><input type="checkbox" id="min_type_4"
+                                                name="min_type_4" value="마케팅"><label class="lab_check"
+                                                for="min_type_4"><span class="checkbox"></span> 기타</label></div>                                        
+                                    </div>
+                                </div>
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="form-group">
+                                <input class="form-control" type="text" name="form_name" id="form_name" placeholder="이름"
+                                    required="">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="form-group">
+                                <input class="form-control" type="text" name="form_phone" id="form_phone"
+                                    placeholder="전화번호(-없이 입력해주세요)" required="" pattern="\d+">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="form-group">
+                                <input class="form-control" type="text" name="form_email" id="form_email"
+                                    placeholder="이메일 주소" required="">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+
+                        <div class="col-md-12">
+                            <p><input type="checkbox" name="agree_1" id="agree_1" value="제공"><label class="lab_check"
+                                    for="agree_1"><span class="checkbox"></span> <a
+                                        href="javascript:showPrivacyDialog();">개인정보 처리방침</a> 동의 <span
+                                        class="required">(필수)</span></label></p>
+                            <hr class="m-b-30 m-t-30">
+                            <div class="text-center">
+                                <input class="btn btn-circle btn-brand btn-block" id="email_up_send" type="submit" value="연락처 남기기">
+                                    이 사이트는 reCAPTCHA의 보호를 받으며 Google <a href='https://policies.google.com/privacy' style='color:#333;' target='_blank'>개인 정보 보호 정책</a> 및 <a href='https://policies.google.com/terms' style='color:#333;' target='_blank'>서비스 약관</a>이 적용됩니다.</a>
+                            </div>
+                            <input type="hidden" name="form_token" id="form_token">
+                            <input name="form_kind" id="form_kind" type="hidden" value="aplycontact">
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </section>
+
         <!-- Footer-->
         <footer class="footer">
             <div class="footer-widgets">
@@ -1255,6 +1326,148 @@
             </div>
         </div>
     </div>
+
+    <!-- Modal 3 -->
+    <div class="modal fade" id="modal-3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">(주)어플라이 개인정보 처리방침</h5>
+                    <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span
+                            aria-hidden="true">×</span></button>
+                </div>
+                <div class="modal-body">
+                    <p>주식회사 어플라이(이하 '회사')는 개인정보보호법에 따라 이용자의 개인정보 보호 및 권익을 보호하고 개인정보와 관련한 이용자의 고충을 원활하게 처리할 수 있도록 다음과 같은
+                        처리방침을 두고 있습니다. 회사는 개인정보처리방침을 개정하는 경우 APLY 채용 서비스(이하 '서비스')의 웹사이트(https://aply.biz) 공지사항 또는 개별공지를
+                        통하여 공지할 것입니다. 본 방침은 2021년 2월 15일부터 시행됩니다.</p>
+
+                    <h6>제1조 개인정보의 수집, 이용 목적</h6>
+                    <p>
+                        1. "개인정보"라 함은 생존하는 개인에 관한 정보로서 당해 정보에 포함되어 있는 성명, 전화번호, 이메일 사항에 의하여 당해 개인을 식별할 수 있는 정보(당해 정보만으로는
+                        특정 개인을 식별할 수 없더라도 다른 정보와 용이하게 결합하여 식별할 수 있는 것을 포함)를 말합니다. 회사는 이용자의 사전 동의 없이는 이용자의 개인 정보를 함부로
+                        공개하지 않으며, 수집된 정보는 아래와 같이 이용하고 있습니다.<br>
+                        ① 회사의 채용 계획이 있을 경우 이메일, 전화 등의 방법으로 해당 내용을 전달 해 드립니다.<br>
+                        ④ 회사는 이용자가 서비스 이용 시 개인정보 활용 동의 절차에서 「동의」를 선택함으로써 상기 서비스 진행사항 통보 및 관련 정보 제공 등의 목적으로 활용함에 동의한 것으로
+                        봅니다.<br>
+                        2. 개인정보 파일 현황<br />
+                        ① 개인정보 파일명 : 없음(이메일 서비스에 기록)<br />
+                        ② 개인정보 항목 : 이름, 전화번호, 이메일<br />
+                        ③ 수집방법 : 홈페이지를 통한 수집<br />
+                        ④ 보유근거 : 관계법령<br />
+                        ⑤ 보유기간 : 3년<br />
+                        ⑥ 관련법령 : 소비자의 불만 또는 분쟁처리에 관한 기록 3년
+                    </p>
+
+                    <h6>제2조 개인정보의 처리 및 보유 기간</h6>
+                    <p>
+                        1. 회사는 법령에 따른 개인정보 보유·이용기간 또는 정보주체로부터 개인정보를 수집시에 동의받은 개인정보 보유, 이용기간 내에서 개인정보를 처리, 보유합니다.<br />
+                        2. 각각의 개인정보 처리 및 보유 기간은 다음과 같습니다.<br />
+                        ① 재화 또는 서비스 제공과 관련한 개인정보는 수집·이용에 관한 동의일로부터 3년까지 위 이용목적을 위하여 보유·이용됩니다.<br />
+                        ② 보유근거 : 관련법령<br />
+                        ③ 관련법령 : 소비자의 불만 또는 분쟁처리에 관한 기록 3년
+                    </p>
+
+                    <h6>제3조 정보주체와 법정대리인의 권리·의무 및 그 행사방법</h6>
+                    <p>
+                        이용자는 개인정보주체로서 다음과 같은 권리를 행사할 수 있습니다.<br />
+                        ① 정보주체는 회사에 대해 언제든지 개인정보 열람,정정,삭제,처리정지 요구 등의 권리를 행사할 수 있습니다.<br />
+                        ② 제1항에 따른 권리 행사는 회사에 대해 개인정보 보호법 시행령 제41조 제1항에 따라 서면, 전자우편, 모사전송(FAX) 등을 통하여 하실 수 있으며 회사는 이에 대해
+                        지체 없이 조치하겠습니다.<br />
+                        ③ 제1항에 따른 권리 행사는 정보주체의 법정대리인이나 위임을 받은 자 등 대리인을 통하여 하실 수 있습니다. 이 경우 개인정보 보호법 시행규칙 별지 제11호 서식에 따른
+                        위임장을 제출하셔야 합니다.<br />
+                        ④ 개인정보 열람 및 처리정지 요구는 개인정보보호법 제35조 제5항, 제37조 제2항에 의하여 정보주체의 권리가 제한될 수 있습니다.<br />
+                        ⑤ 개인정보의 정정 및 삭제 요구는 다른 법령에서 그 개인정보가 수집 대상으로 명시되어 있는 경우에는 그 삭제를 요구할 수 없습니다.<br />
+                        ⑥ 회사는 정보주체 권리에 따른 열람의 요구, 정정·삭제의 요구, 처리정지의 요구 시 열람 등 요구를 한 자가 본인이거나 정당한 대리인인지를 확인합니다.
+                    </p>
+
+                    <h6>제4조 처리하는 개인정보의 항목</h6>
+                    <p>
+                        회사는 서비스 제공을 위해 다음의 개인정보 항목을 처리하고 있습니다.<br />
+                        ① 필수항목 : 이름, 전화번호, 이메일<br />
+                        ② 선택항목 :
+                    </p>
+
+                    <h6>제5조 개인정보의 파기 절차 및 방법</h6>
+                    <p>
+                        회사는 원칙적으로 개인정보 처리목적이 달성된 경우에는 지체없이 해당 개인정보를 파기합니다. 파기의 절차, 기한 및 방법은 다음과 같습니다.<br />
+                        ① 파기절차 : 이용자가 입력한 정보는 목적 달성 후 별도의 DB에 옮겨져(종이의 경우 별도의 서류) 내부 방침 및 기타 관련 법령에 따라 일정기간 저장된 후 혹은 즉시
+                        파기됩니다. 이 때 DB로 옮겨진 개인정보는 법률에 의한 경우가 아니고서는 다른 목적으로 이용되지 않습니다.<br />
+                        ② 파기기한 : 이용자의 개인정보는 개인정보의 보유기간이 경과된 경우에는 보유기간의 종료일로부터 5일 이내에, 개인정보의 처리 목적 달성, 해당 서비스의 폐지, 사업의 종료
+                        등 그 개인정보가 불필요하게 되었을 때에는 개인정보의 처리가 불필요한 것으로 인정되는 날로부터 5일 이내에 그 개인정보를 파기합니다.<br />
+                        ③ 파기방법 : 전자적 파일 형태의 정보는 기록을 재생할 수 없는 기술적 방법을 사용합니다.
+                    </p>
+
+                    <h6>제6조 개인정보 자동 수집 장치의 설치&bull;운영 및 거부에 관한 사항</h6>
+                    <p>
+                        ① 회사는 개별적인 맞춤서비스를 제공하기 위해 이용정보를 저장하고 수시로 불러오는 쿠기(cookie)를 사용합니다.<br />
+                        ② 쿠키는 웹사이트를 운영하는 데 이용되는 서버(https)가 이용자의 컴퓨터 브라우저에게 보내는 소량의 정보이며 이용자들의 PC 컴퓨터내의 하드디스크에 저장되기도
+                        합니다.<br />
+                        ③ 쿠키의 사용 목적 : 이용자가 방문한 각 서비스와 웹 사이트들에 대한 방문 및 이용형태, 인기 검색어, 보안접속 여부, 등을 파악하여 이용자에게 최적화된 정보 제공을
+                        위해 사용됩니다.<br />
+                        ④ 쿠키의 설치&middot;운영 및 거부 : 웹브라우저 상단의 도구&gt;인터넷 옵션&gt;개인정보 메뉴의 옵션 설정을 통해 쿠키 저장을 거부할 수 있습니다.<br />
+                        ⑤ 쿠키 저장을 거부할 경우 맞춤형 서비스 이용에 어려움이 발생할 수 있습니다.
+                    </p>
+
+                    <h6>제7조 개인정보보호 책임자 등</h6>
+                    <p>
+                        ① 회사는 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고
+                        있습니다.<br />
+                    <table class="table table-bordered table-sm" style="width:75%; marign:0 auto;">
+                        <tr>
+                            <td colspan=2 style="text-align:center; background-color: #f4f4f4;">개인정보보호 책임자</td>
+                        </tr>
+                        <tr>
+                            <td>성명(직책)</td>
+                            <td>이건우(대표)</td>
+                        </tr>                        
+                        <tr>
+                            <td>이메일</td>
+                            <td> contactus@aply.biz</td>
+                        </tr>
+                        <tr>
+                            <td colspan=2 style="text-align:center; background-color: #f4f4f4;">개인정보보호 담당부서</td>
+                        </tr>
+                        <tr>
+                            <td>부서명</td>
+                            <td>전략기획팀</td>
+                        </tr>
+                        <tr>
+                            <td>담당자</td>
+                            <td> 이건우</td>
+                        </tr>                        
+                        <tr>
+                            <td>이메일</td>
+                            <td> contactus@aply.biz</td>
+                        </tr>
+                    </table>
+                    ② 정보주체께서는 회사의 서비스(또는 사업)을 이용하시면서 발생한 모든 개인정보 보호 관련 문의, 불만처리, 피해구제 등에 관한 사항을 개인정보 보호책임자 및 담당부서로 문의하실
+                    수 있습니다. 회사는 정보주체의 문의에 대해 지체 없이 답변 및 처리해드릴 것입니다.
+                    </p>
+
+                    <h6>제8조 개인정보 처리방침 변경</h6>
+                    <p>이 개인정보처리방침은 시행일로부터 적용되며, 법령 및 방침에 따른 변경내용의 추가, 삭제 및 정정이 있는 경우에는 변경사항의 시행 7일 전부터 공지사항을 통하여 고지할
+                        것입니다.</p>
+
+                    <h6>제9조 개인정보의 안전성 확보 조치</h6>
+                    <p>
+                        회사는 개인정보보호법 제29조에 따라 다음과 같이 안전성 확보에 필요한 기술적/관리적 및 물리적 조치를 하고 있습니다.<br />
+                        ① 개인정보 취급 직원의 최소화 및 교육 : 개인정보를 취급하는 직원을 지정하고 담당자에 한정시켜 최소화하여 개인정보를 관리하는 대책을 시행하고 있습니다.<br />
+                        ② 내부관리계획의 수립 및 시행 : 개인정보의 안전한 처리를 위하여 내부관리계획을 수립하고 시행하고 있습니다.<br />
+                        ③ 해킹 등에 대비한 기술적 대책 : 회사는 해킹이나 컴퓨터 바이러스 등에 의한 개인정보 유출 및 훼손을 막기 위하여 보안프로그램을 설치하고 주기적인
+                        갱신&middot;점검을 하며 외부로부터 접근이 통제된 구역에 시스템을 설치하고 기술적/물리적으로 감시 및 차단하고 있습니다.<br />
+                        ④ 접속기록의 보관 및 위변조 방지 : 개인정보처리시스템에 접속한 기록을 최소 6개월 이상 보관, 관리하고 있으며, 접속 기록이 위변조 및 도난, 분실되지 않도록 보안기능
+                        사용하고 있습니다.<br />
+                        ⑤ 개인정보에 대한 접근 제한 : 개인정보를 처리하는 데이터베이스시스템에 대한 접근권한의 부여, 변경, 말소를 통하여 개인정보에 대한 접근통제를 위하여 필요한 조치를 하고
+                        있으며 침입차단시스템을 이용하여 외부로부터의 무단 접근을 통제하고 있습니다.
+                    </p>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-secondary btn-sm btn-circle" type="button" data-dismiss="modal">닫기</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- To top button--><a class="scroll-top" href="#top"><i class="fas fa-angle-up"></i></a>    
     <!-- Scripts-->
     <script src="assets/js/custom/jquery-3.2.1.min.js"></script>
@@ -1263,7 +1476,8 @@
     <script src="assets/js/custom/plugins.min.js"></script>
     <script src="assets/js/custom/anime.min.js"></script>
     <script src="assets/js/custom/jquery.youtube-background.js?v=1.0.7"></script>
-    <script src="assets/js/custom/custom.js"></script>
+    <script src="assets/js/custom/handler.js"></script>
+    <script src="assets/js/custom/custom.js"></script>    
     <script src="assets/js/aplyServices.js?v=20230917_01"></script>
     <script>
         function showEmailPolicyDialog() {        
