google recaptcha 적용

--- a/index.html
+++ b/index.html
@@ -58,10 +58,16 @@
     <!-- Plugins-->
     <link href="assets/css/plugins.min.css" rel="stylesheet">
     <!-- Template core CSS-->
-    <link href="assets/css/template.css?v=20230413_01" rel="stylesheet">    
+    <link href="assets/css/template.css?v=20230413_01" rel="stylesheet">
+    <style>
+        .grecaptcha-badge {
+            visibility: hidden;
+        }
+    </style>
 </head>
 
 <body>
+    <script src='https://www.google.com/recaptcha/api.js?render=6LfPn_UUAAAAAN-EHnm2kRY9dUT8aTvIcfrvxGy7'></script>
     <div id="fb-root"></div>
     <script>(function (d, s, id) {
             var js, fjs = d.getElementsByTagName(s)[0];
