recruit 페이지의 location 정보 제거

--- a/index.html
+++ b/index.html
@@ -97,16 +97,11 @@
             <div class="inner-navigation collapse">
                 <div class="inner-nav">
                     <ul>
-                        <li><a href="#"><span class="menu-item-span">MAIN</span></a>
-                        </li>
-                        <li><a href="#section-about"><span class="menu-item-span">SERVICE</span></a>
-                        </li>
-                        <li><a href="#section-si"><span class="menu-item-span">SI</span></a>
-                        </li>
-                        <li><a href="#section-history"><span class="menu-item-span">HISTORY</span></a>
-                        </li>
-                        <li><a href="#section-team"><span class="menu-item-span">TEAM</span></a>
-                        </li>                        
+                        <li><a href="#"><span class="menu-item-span">MAIN</span></a></li>
+                        <li><a href="#section-about"><span class="menu-item-span">SERVICE</span></a></li>
+                        <li><a href="#section-si"><span class="menu-item-span">SI</span></a></li>
+                        <li><a href="#section-history"><span class="menu-item-span">HISTORY</span></a></li>
+                        <li><a href="#section-team"><span class="menu-item-span">TEAM</span></a></li>
                         <li><a href="https://blog.naver.com/PostList.naver?blogId=jebo78&categoryNo=38&from=postList" target="_blank"><span
                                     class="menu-item-span">BLOG</span></a>
                         </li>
@@ -185,7 +180,7 @@
                                 </div>
                                 <div class="collapse" id="collapse-3" data-parent="#accordion3">
                                     <div class="accordion-item-body">
-                                        <p>최신 기술과 트렌드를 끊임없이 학습하고 문제와 요구사항을 정확하게 이해하여 불편없이 사용할 수 있는 소프트웨어와 하드웨어를 개발합니다.</p>
+                                        <p>최신 기술과 트렌드를 끊임없이 학습하고 문제와 요구사항을 정확하게 이해하여 불편없이 사용할 수 있는 소프트웨어를 개발합니다.</p>
                                     </div>
                                 </div>
                             </div>
@@ -393,7 +388,7 @@
                             <div class="feature-content">
                                 <h6><B>SW 개발</B></h6>
                                 <ul>
-                                    <li><i class="ti-control-record"></i> Android/iOS/Linux/Windows/Mac 등 각종 플랫폼 SW, FW 개발</li>
+                                    <li><i class="ti-control-record"></i> Android/iOS/Linux/Windows/MacOS 등 각종 플랫폼 SW/FW 개발</li>
                                     <li><i class="ti-control-record"></i> K社 - 디바이스 제어 앱, K社/D社 - FW 개발 등</li>
                                     <li>&nbsp;</li>                                    
                                 </ul>
