--- a/recruit/index.html
+++ b/recruit/index.html
@@ -104,14 +104,12 @@
                     <ul>
                         <li><a href="../index.html"><span class="menu-item-span">MAIN</span></a>
                         </li>
-                        <li><a href="../index.html#section-about"><span class="menu-item-span">BUSINESS</span></a>
-                        </li>
+                        <li><a href="../index.html#section-about"><span class="menu-item-span">SERVICE</span></a></li>
+                        <li><a href="../index.html#section-si"><span class="menu-item-span">SI</span></a></li>
                         <li><a href="../index.html#section-history"><span class="menu-item-span">HISTORY</span></a>
                         </li>
                         <li><a href="../index.html#section-team"><span class="menu-item-span">TEAM</span></a>
-                        </li>
-                        <li><a href="#section-location"><span class="menu-item-span">LOCATION</span></a>
-                        </li>
+                        </li>                        
                         <li><a href="https://blog.naver.com/PostList.naver?blogId=jebo78&categoryNo=38&from=postList" target="_blank"><span
                                     class="menu-item-span">BLOG</span></a>
                         </li>
@@ -484,31 +482,7 @@
                     </div>
                 </div>
             </div>
-        </section>
-
-        <!-- Counters-->
-        <section class="module" id="section-location">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <h4>Location</h4>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d197.16406501490306!2d126.76789609132942!3d37.75193997258904!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357c8de5a3605b8f%3A0x2e35168624ee623a!2z67O0656M7ZSE65287J6Q!5e0!3m2!1sko!2skr!4v1672539521417!5m2!1sko!2skr" width="100%" height="500px" frameborder="0" style="border:0;" allowfullscreen=""
-                        aria-hidden="false" tabindex="0" loading="lazy"></iframe>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-md-12 text-center">
-                            <span style="font-size:15px;color:#000">주식회사 어플라이는 팀원 모두가 재택근무를 하고 있습니다.</span>
-                        </div>
-                        <div class="col-md-12 text-center">
-                            <div class="space" data-MY="60px">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-        </section>
-        <!-- Counters end-->
+        </section>        
 
         <!-- Footer-->
         <footer class="footer">
