aqr 등록계좌 2000개 돌파 history 추가

--- a/index.html
+++ b/index.html
@@ -429,6 +429,18 @@
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
                             <div class="icon-box-title">
+                                <h6>2023-10</h6>
+                            </div>
+                            <div class="icon-box-content">
+                                <p>AQR 서비스 등록 계좌 정보 2000개 돌파</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6">
+                        <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
+                            <div class="icon-box-title">
                                 <h6>2023-07</h6>
                             </div>
                             <div class="icon-box-content">
