은혜작가 전시회 적용 기록 추가

--- a/index.html
+++ b/index.html
@@ -429,6 +429,19 @@
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
                             <div class="icon-box-title">
+                                <h6>2023-11</h6>
+                            </div>
+                            <div class="icon-box-content">
+                                <p>정은혜 작가 전시회 '해의 시선'전 대상 APLX 배리어 프리 기술 적용
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6">
+                        <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
+                            <div class="icon-box-title">
                                 <h6>2023-10</h6>
                             </div>
                             <div class="icon-box-content">
