--- a/main.html
+++ b/main.html
@@ -270,7 +270,7 @@
           <div class="row justify-content-center">
             <div class="col-md-6 text-center mb-3">
               <span class="eyebrow mb-2 text-primary">Our Partners</span>
-              <h5 class="fs-18">APLY는 업무 협약 및 제휴를 통해<br />기술의 전문성을 높이고 활동의 영역을 확장합니다.</h5>
+              <h5 class="fs-18">APLY는 업무 협약 및 제휴를 통해<br />기술의 전문성을 높이고 활동 영역을 확장합니다.</h5>
             </div>
           </div>
           <div class="row">
@@ -335,7 +335,7 @@
             <div class="row mb-8">
               <div class="col-12 text-center">
                 <h4><b>상담 및 문의</b></h4>
-                <p class="lead">어플라이의 도움이 필요하세요? <br />먼저 분야를 선택 후 문의 내용을 작성해주세요.</p>
+                <p class="lead">어플라이의 도움이 필요하세요? <br />분야를 선택한 후 문의 내용을 작성해주세요.</p>
               </div>
             </div>  
             <div class="row justify-content-center mb-2">
