--- a/symbol/index.html
+++ b/symbol/index.html
@@ -44,7 +44,7 @@
     <meta itemprop="url" content="https://home.aply.biz/">
 
     <!-- Favicons-->
-    <link rel="shortcut icon" href="https://home.aply.biz/assets/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://home.aply.biz/assets/img/favicon.ico" type="image/x-icon">
     <link rel="alternate" href="https://home.aply.biz/" hreflang="x-default">
     <link rel="canonical" href="https://home.aply.biz/">
 
@@ -54,9 +54,7 @@
         rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <!-- Plugins-->
-    <link href="../assets/css/plugins.min.css" rel="stylesheet">
-    <!-- Template core CSS-->
-    <link href="../assets/css/template.css" rel="stylesheet">
+    <link href="../assets/css/style.css" rel="stylesheet">        
     <style>
         .ml15 {}
 
@@ -598,11 +596,8 @@
     <!-- To top button--><a class="scroll-top" href="#top"><i class="fas fa-angle-up"></i></a>
 
     <!-- Scripts-->
-    <script src="../assets/js/custom/jquery.min.js"></script>
-    <script src="../assets/js/custom/popper.min.js"></script>
-    <script src="../assets/js/bootstrap/bootstrap.min.js"></script>
-    <script src="../assets/js/custom/plugins.min.js"></script>
-    <script src="../assets/js/custom/custom.min.js"></script>
+    <script src="../assets/js/custom/jquery-3.2.1.min.js"></script>    
+    <script src="../assets/js/bootstrap/bootstrap.min.js"></script>    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="../assets/js/custom/jquery.youtube-background.js?v=1.0.7"></script>    
     <script src="./js/clipboard.min.js"></script>
