--- a/main.html
+++ b/main.html
@@ -397,8 +397,11 @@
               </div>
             </div>    
             <div class="row justify-content-center mb-2">
-              <div class="col-md-4">                  
+              <div class="col-md-4 text-center">
                  <button class="btn btn-primary btn-block" id="email_up_send">Send</button>
+                 <div class="loadingio-spinner-pulse-wy2zuz4u6s">
+                    <div class="ldio-nmhf9bu0h7t"><div></div><div></div><div></div></div>
+                 </div>
               </div>
             </div>
             <div class="row justify-content-center mb-6">
