--- a/recruit.html
+++ b/recruit.html
@@ -109,8 +109,11 @@
               </div>
             </div>
             <div class="row justify-content-center mb-6">
-              <div class="col-md-4">                  
+              <div class="col-md-4 textg-center">
                 <button class="btn btn-primary btn-block" id="recruit_form_send">Send</button>
+                <div class="loadingio-spinner-pulse-wy2zuz4u6s">
+                  <div class="ldio-nmhf9bu0h7t"><div></div><div></div><div></div></div>
+                </div>
               </div>
             </div>
           </form>
