loader spinner 모습 수정

--- a/contact.html
+++ b/contact.html
@@ -111,9 +111,9 @@
                    <div class="row justify-content-center mb-2">
                      <div class="col-md-6 text-center">
                        <button class="btn btn-primary btn-block" id="email_up_send">Send</button>
-                       <div class="loadingio-spinner-pulse-wy2zuz4u6s">
-                          <div class="ldio-nmhf9bu0h7t"><div></div><div></div><div></div></div>
-                       </div>
+                       <div class="loadingio-spinner">
+                        <div class="ldio-ec10op87166"><div></div></div>
+                      </div>
                      </div>
                    </div>
                    <div class="row justify-content-center mb-6">
