--- a/recruit.html
+++ b/recruit.html
@@ -111,8 +111,8 @@
             <div class="row justify-content-center mb-6">
               <div class="col-md-4 textg-center">
                 <button class="btn btn-primary btn-block" id="recruit_form_send">Send</button>
-                <div class="loadingio-spinner-pulse-wy2zuz4u6s">
-                  <div class="ldio-nmhf9bu0h7t"><div></div><div></div><div></div></div>
+                <div class="loadingio-spinner">
+                  <div class="ldio-ec10op87166"><div></div></div>
                 </div>
               </div>
             </div>
