--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,7 @@
                      </div>
                    </div>    
                    <div class="row justify-content-center mb-2">
-                     <div class="col-md-6 text-center">
+                     <div class="col-md-6 text-center justify-content-center">
                        <button class="btn btn-primary btn-block" id="email_up_send">Send</button>
                        <div class="loadingio-spinner">
                         <div class="ldio-ec10op87166"><div></div></div>
