--- a/recruit.html
+++ b/recruit.html
@@ -109,7 +109,7 @@
               </div>
             </div>
             <div class="row justify-content-center mb-6">
-              <div class="col-md-4 textg-center">
+              <div class="col-md-4 textg-center justify-content-center">
                 <button class="btn btn-primary btn-block" id="recruit_form_send">Send</button>
                 <div class="loadingio-spinner">
                   <div class="ldio-ec10op87166"><div></div></div>
