--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <div class="container">
               <div class="row justify-content-center">
                 <div class="col-5">
-                  <button class="btn btn-primary btn-block" type="button" data-dismiss="modal">확인</button>
+                  <button class="btn btn-primary btn-block" type="button" data-dismiss="modal" id="askModalOKButton">확인</button>
                 </div>
               </div>
             </div>  
