main, service page fixed

--- a/main.html
+++ b/main.html
@@ -211,9 +211,9 @@
                 </div>
                 <div class="col-4" data-aos="zoom-in" data-aos-anchor-placement="top-center">
                   <div class="presentation-circle presentation-circle-white">
-                    <figure style="background-image: url('assets/img/service_cover_store.jpg')"></figure>
+                    <figure style="background-image: url('assets/img/service_3.jpg')"></figure>
                   </div>
-                  <p class="mt-1 text-center">AQR 플레이트</p>
+                  <p class="mt-1 text-center">SI</p>
                 </div>
               </div>
               <a href="/?p=service"><button type="button" class="btn btn-with-ico btn-light mt-2">Learn more  <i class="icon-arrow-right2"></i></button></a>
@@ -228,7 +228,7 @@
                 <footer class="blockquote-footer">APLX - KBS 뉴스</footer>
               </blockquote>
               <blockquote class="blockquote blockquote-2 boxed" data-aos="fade-up">
-                <p>깔끔하고 잘 인식돼서 좋아요<br />예쁘고 깔끔해요 편리하게 사용하기 좋은거 같아요</p>
+                <p>깔끔하고 잘 인식돼서 좋아요.<br />예쁘고 깔끔해요 편리하게 사용하기 좋은거 같아요.</p>
                 <footer class="blockquote-footer">AQR 플레이트 - 네이버 스마트 스토어 리뷰</footer>
               </blockquote>
             </div>
