문구 수정, 서비스 화면의 서비스 배치 수정

--- a/about.html
+++ b/about.html
@@ -50,9 +50,14 @@
                       <div class="accordion-content" data-content>
                         <div class="accordion-content-wrapper">
                           <p>
-                            <span>11월</span><br />
-                            AQR 서비스 론칭 1주년, 등록 계좌 정보 3,000개 돌파<br />
-                            정은혜 작가 전시회 '해의 시선'배리어 프리  전시 협업
+                            <span>12월</span><br />
+                            AQR 서비스 론칭 1주년, 등록 계좌 정보 3,000개 돌파                            
+                          </p>
+                        </div>
+                        <div class="accordion-content-wrapper">
+                          <p>
+                            <span>11월</span><br />                            
+                            정은혜 작가 전시회 '해의 시선'배리어 프리 전시 협업
                           </p>
                         </div>
                       </div>
@@ -199,7 +204,7 @@
                   <p class="text-dark mb-0">Vision, AR, Big Data, AI</p>
                   <p>데이터를 이해하고 가치를 발굴하며 인공지능을 디자인합니다.</p>
                   <p class="text-dark mb-0">Software and Hardware</p>
-                  <p>최신 기술과 트렌드를 끊임없이 학습하고 문제와 요구사항을 정확하게 이해하여 개발합니다.</p>
+                  <p>최신 기술과 트렌드를 끊임없이 학습하고 문제와 요구사항을 정확하게 이해합니다.</p>
                 </div>
               </div>
             </div>
