--- a/service.html
+++ b/service.html
@@ -19,7 +19,7 @@
              </div>
              <div class="swiper-slide">
                <div id="ytbg2" data-ytbg-fade-in="true" data-ytbg-mobile="true" data-youtube="https://www.youtube.com/watch?v=B4zC6-kr8Zc"></div>
-               <div class="caption text-white" data-swiper-parallax="-100%"">
+               <div class="caption text-white" data-swiper-parallax="-100%">
                  <div class="container">
                    <div class="row align-items-center justify-content-center vh-70">
                      <div class="col-md-8 col-lg-6 text-center"></div>
@@ -101,18 +101,18 @@
            </div>
          </div>
          <div class="row align-items-center justify-content-center">
+           <div class="col-md-5" data-aos="zoom-in" data-aos-anchor-placement="top-center">
+            <div class="presentation-circle">
+              <figure style="background-image: url('assets/img/service_2.jpg')"></figure>
+            </div>
+           </div>
            <div class="col-md-5 py-10 pl-md-10 text-center text-md-left">
              <h5 class="font-weight-bold">APLX<span class="font-weight-light text-black-50 pl-2">어플렉스</span></h5>
              <p class="pb-4">AR 기반 홍보/전시/커뮤니케이션 솔루션</p>
              <a href="//aplx.link" target="_blank">
                <button type="button" class="btn btn-with-ico btn-rounded btn-primary">Learn more <i class="icon-arrow-right2"></i></button>
              </a>
-           </div>
-           <div class="col-md-5" data-aos="zoom-in" data-aos-anchor-placement="top-center">
-             <div class="presentation-circle">
-               <figure style="background-image: url('assets/img/service_2.jpg')"></figure>
-             </div>
-           </div>
+           </div>           
          </div>
          <div class="row align-items-center justify-content-center">
            <div class="col-md-5" data-aos="zoom-in" data-aos-anchor-placement="top-center">
@@ -122,7 +122,7 @@
            </div>
            <div class="col-md-5 py-10 pl-md-10 text-center text-md-left">
              <h5 class="font-weight-bold">System Integration</h5>
-             <p class="pb-4">고급 역량을 통해 최고 수준의 SW를 확보하세요.<br />영상처리, 증강현실, Big Data, AI 등 다양한 분야에서 전문 기술을 보유한 연구개발팀이 함께 합니다.</p>
+             <p class="pb-4">고급 역량을 통해 최고 수준의 SW를 확보하세요.<br />영상처리, 증강현실, Big Data, AI 등 다양한 분야의 전문 기술을 보유한 연구개발팀이 함께 합니다.</p>
              <a href="/?p=team">
                <button type="button" class="btn btn-with-ico btn-rounded btn-primary">Learn more <i class="icon-arrow-right2"></i></button>
              </a>
