line 변경 시 중간에 문구가 잘리지 않게끔 - 대상 문구들에 word-break 옵션 적용

--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
                  <i class="icon-question fs-40 text-primary mb-2" data-aos="fade-up" data-aos-delay="50"></i>
                  <h5 class="font-weight-normal">상담 및 문의</h5>
                  <p class="mb-4">문의 남겨주시면 최대한 빠르게 답변드리겠습니다.</p>
-                 <p>먼저 분야를 선택 후 문의 내용을 작성해주세요.</p>
+                 <p>분야를 선택한 후 문의 내용을 작성해주세요.</p>
                  
                  <!-- 문의하기 폼 -->
                  <form role="form" method="post" id="email_up"> 
