--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
           <div class="row justify-content-center text-center">
             <div class="col-lg-10">
               <h2 class="font-weight-bold">APLY</h2>
-              <p class="lead">Advanced platform to fly<br />APLY는 즐겁게 일하는 진보된 플랫폼입니다.</p>
+              <p class="lead" style="word-break:keep-all;">Advanced platform to fly<br />APLY는 즐겁게 일하는 진보된 플랫폼입니다.</p>
             </div>
           </div>
         </div>
