--- a/service.html
+++ b/service.html
@@ -59,7 +59,7 @@
          <div class="row justify-content-center text-center">
            <div class="col-lg-10">
              <h1 class="font-weight-bold">서비스</h1>
-             <p class="lead">AR과 AI에 특화된 APLY 기술이 여러분의 일상에 함께 합니다.</p>
+             <p class="lead" style="word-break:keep-all;">AR과 AI에 특화된 APLY 기술이 여러분의 일상에 함께 합니다.</p>
            </div>
          </div>
        </div>
@@ -139,7 +139,7 @@
              <div class="row">
                <div class="col-lg-8">
                  <h2 class="mb-1 font-weight-bold">APLY Lab</h2>
-                 <p class="lead">작은 기술 빅 재미, APLY의 재미있는 서비스</p>
+                 <p class="lead" style="word-break:keep-all;">작은 기술 빅 재미, APLY의 재미있는 서비스</p>
                </div>
              </div>
              <div class="row gutter-0">
