line 변경 시 중간에 문구가 잘리지 않게끔 - 대상 문구들에 word-break 옵션 적용

--- a/contact.html
+++ b/contact.html
@@ -45,8 +45,8 @@
                <div class="col-md-6 py-10 pl-md-10 text-center text-md-left">
                  <i class="icon-question fs-40 text-primary mb-2" data-aos="fade-up" data-aos-delay="50"></i>
                  <h5 class="font-weight-normal">상담 및 문의</h5>
-                 <p class="mb-4">문의 남겨주시면 최대한 빠르게 답변드리겠습니다.</p>
-                 <p>분야를 선택한 후 문의 내용을 작성해주세요.</p>
+                 <p class="mb-4" style="word-break:keep-all;">문의 남겨주시면 최대한 빠르게 답변드리겠습니다.</p>
+                 <p style="word-break:keep-all;">분야를 선택한 후 문의 내용을 작성해주세요.</p>
                  
                  <!-- 문의하기 폼 -->
                  <form role="form" method="post" id="email_up"> 
@@ -117,7 +117,7 @@
                      </div>
                    </div>
                    <div class="row justify-content-center mb-6">
-                     <div class="col-12 fs-14 text-center">                  
+                     <div class="col-12 fs-14 text-center" style="word-break:keep-all;">                  
                        이 사이트는 reCAPTCHA의 보호를 받으며 Google 
                        <a href='https://policies.google.com/privacy' style='color:#333;' target='_blank'>개인 정보 보호 정책</a> 및 
                        <a href='https://policies.google.com/terms' style='color:#333;' target='_blank'>서비스 약관</a>이 적용됩니다.</a>
