--- a/main.html
+++ b/main.html
@@ -335,7 +335,7 @@
             <div class="row mb-8">
               <div class="col-12 text-center">
                 <h4><b>상담 및 문의</b></h4>
-                <p class="lead">어플라이의 도움이 필요하세요? <br />분야를 선택한 후 문의 내용을 작성해주세요.</p>
+                <p class="lead" style="word-break:keep-all;">어플라이의 도움이 필요하세요? <br />분야를 선택한 후 문의 내용을 작성해주세요.</p>
               </div>
             </div>  
             <div class="row justify-content-center mb-2">
@@ -405,7 +405,7 @@
               </div>
             </div>
             <div class="row justify-content-center mb-6">
-              <div class="col-md-9 fs-14 text-center">                  
+              <div class="col-md-9 fs-14 text-center" style="word-break:keep-all;">                  
                 이 사이트는 reCAPTCHA의 보호를 받으며 Google 
                 <a href='https://policies.google.com/privacy' style='color:#333;' target='_blank'>개인 정보 보호 정책</a> 및 
                 <a href='https://policies.google.com/terms' style='color:#333;' target='_blank'>서비스 약관</a>이 적용됩니다.</a>
