--- a/recruit.html
+++ b/recruit.html
@@ -8,8 +8,8 @@
                 <div class="container">
                   <div class="row align-items-center justify-content-center vh-90">
                     <div class="col-12 text-center">
-                      <p class="lead mb-2 text-white">즐겁게 일하는 진보된 플랫폼</p>
-                      <h1 class="h2 font-weight-bold">APLY의 팀원이 되실 분을 기다립니다.</h1>
+                      <p class="lead mb-2 text-white" style="word-break:keep-all;">즐겁게 일하는 진보된 플랫폼</p>
+                      <h1 class="h2 font-weight-bold" style="word-break:keep-all;">APLY의 팀원이 되실 분을 기다립니다.</h1>
                     </div>
                   </div>
                 </div>  
@@ -28,8 +28,8 @@
                 <i class="fas fa-user-circle fs-60" style="color:#0030AE;"></i>
               </div>
               <div class="col-md-10 text-center">
-                <h3 class="mb-1">지금은 채용기간이 아닙니다.</h3>
-                <p>APLY를 방문해주셔서 감사합니다. 연락처를 남겨주시면 채용계획이 있을 때 연락드리겠습니다.</p>
+                <h3 class="mb-1" style="word-break:keep-all;">지금은 채용기간이 아닙니다.</h3>
+                <p style="word-break:keep-all;">APLY를 방문해주셔서 감사합니다. 연락처를 남겨주시면 채용계획이 있을 때 연락드리겠습니다.</p>
               </div>
             </div>
           </div>
@@ -43,7 +43,7 @@
             <div class="row mb-8">
               <div class="col-12 text-center">
                 <h4><b>연락처 남기기</b></h4>
-                <p class="lead">먼저 관심 직군을 선택한 후 연락처를 남겨주세요.</p>
+                <p class="lead" style="word-break:keep-all;">먼저 관심 직군을 선택한 후 연락처를 남겨주세요.</p>
               </div>
             </div>            
             <div class="row justify-content-center mb-2">
