--- a/service.html
+++ b/service.html
@@ -91,7 +91,7 @@
            </div>
            <div class="col-md-5 py-10 pl-md-10 text-center text-md-left">
              <h5 class="font-weight-bold">AQR<span class="font-weight-light text-black-50 pl-2">에이큐알</span></h5>
-             <p class="pb-4">
+             <p class="pb-4" style="word-break:keep-all;">
                QR 코드 기반의 간편한 송금 지원 서비스<br />계좌번호 노출 없이 고유 QR과 URL로 입금 요청 가능<br />
                뛰어난 QR 인식 기능성, 모던한 메탈 재질의 AQR 플레이트
              </p>
@@ -108,7 +108,7 @@
            </div>
            <div class="col-md-5 py-10 pl-md-10 text-center text-md-left">
              <h5 class="font-weight-bold">APLX<span class="font-weight-light text-black-50 pl-2">어플렉스</span></h5>
-             <p class="pb-4">AR 기반 홍보/전시/커뮤니케이션 솔루션</p>
+             <p class="pb-4" style="word-break:keep-all;">AR 기반 홍보/전시/커뮤니케이션 솔루션</p>
              <a href="//aplx.link" target="_blank">
                <button type="button" class="btn btn-with-ico btn-rounded btn-primary">Learn more <i class="icon-arrow-right2"></i></button>
              </a>
@@ -122,7 +122,7 @@
            </div>
            <div class="col-md-5 py-10 pl-md-10 text-center text-md-left">
              <h5 class="font-weight-bold">System Integration</h5>
-             <p class="pb-4">고급 역량을 통해 최고 수준의 SW를 확보하세요.<br />영상처리, 증강현실, Big Data, AI 등 다양한 분야의 전문 기술을 보유한 연구개발팀이 함께 합니다.</p>
+             <p class="pb-4" style="word-break:keep-all;">고급 역량을 통해 최고 수준의 SW를 확보하세요.<br />영상처리, 증강현실, Big Data, AI 등 다양한 분야의 전문 기술을 보유한 연구개발팀이 함께 합니다.</p>
              <a href="/?p=team">
                <button type="button" class="btn btn-with-ico btn-rounded btn-primary">Learn more <i class="icon-arrow-right2"></i></button>
              </a>
