--- a/about.html
+++ b/about.html
@@ -202,9 +202,9 @@
                 <div class="col-lg-4 py-8 pl-md-10 text-left bg-white">
                   <h4 class="font-weight-normal mb-2">Our Story</h4>
                   <p class="text-dark mb-0">Vision, AR, Big Data, AI</p>
-                  <p>데이터를 이해하고 가치를 발굴하며 인공지능을 디자인합니다.</p>
+                  <p style="word-break:keep-all;">데이터를 이해하고 가치를 발굴하며 인공지능을 디자인합니다.</p>
                   <p class="text-dark mb-0">Software and Hardware</p>
-                  <p>최신 기술과 트렌드를 끊임없이 학습하고 문제와 요구사항을 정확하게 이해합니다.</p>
+                  <p style="word-break:keep-all;">최신 기술과 트렌드를 끊임없이 학습하고 문제와 요구사항을 정확하게 이해합니다.</p>
                 </div>
               </div>
             </div>
@@ -244,7 +244,7 @@
                 </div>
                 <div class="col-lg-8 py-10 pl-md-10 partners align-items-center">
                   <h4 class="font-weight-normal">Partners</h4>
-                  <p class="mb-6">APLY는 업무 협약 및 제휴를 통해 기술의 전문성을 높이고 활동의 영역을 확장합니다.</p>
+                  <p class="mb-6" style="word-break:keep-all;">APLY는 업무 협약 및 제휴를 통해 기술의 전문성을 높이고 활동의 영역을 확장합니다.</p>
                   <div class="owl-carousel" data-items="[4,4,2]" data-aos="zoom-in" data-loop="true" data-autoplay="true">
                     <div class="logo">
                       <a href="//www.msit.go.kr" target="_blank"><img src="assets/img/partners_logo_s&t.png" class="bordered border-secondary p-1" alt="과학기술정보통신부" /></a>
