--- a/service.html
+++ b/service.html
@@ -27,11 +27,14 @@
                  </div>  
                </div>
              </div>
-             <div class="swiper-slide">
-               <div class="image image-overlay" style="background-image:url(assets/img/service_3.jpg)"></div>
+             <div class="swiper-slide">              
+              <div id="ytbg3" data-ytbg-fade-in="true" data-ytbg-mobile="true" data-youtube="https://www.youtube.com/watch?v=lIaTfbLI5Gc"></div>
+               <!-- <div class="image image-overlay" style="background-image:url(assets/img/service_3.jpg)"></div> -->
                <div class="caption text-white" data-swiper-parallax="-100%">
                  <div class="container">
-                   <div class="row justify-content-center align-items-center vh-70"></div>
+                   <div class="row justify-content-center align-items-center vh-70">
+                    <div class="col-md-8 col-lg-6 text-center"></div>
+                   </div>
                  </div>
                </div>
              </div>
