RnD KIOSK 경로 수정

--- a/service.html
+++ b/service.html
@@ -175,7 +175,7 @@
                    <i class="far fa-newspaper text-primary fs-40 mb-3"></i>
                    <h4 class="mb-0">R&D Kiosk</h4>
                    <p>국가 R&D 사업 및 과학기술 정보를 인포그래픽으로 구성한 웹진(과기부 발행)</p>
-                   <a href="//aplylab.com/kiosk/index_2022.html" target="_blank" class="link">Learn More</a>
+                   <a href="//kiosk.aply.biz/index_2022.html" target="_blank" class="link">Learn More</a>
                  </div>
                </div>
              </div>
