--- a/symbol/index.html
+++ b/symbol/index.html
@@ -317,9 +317,10 @@
                                     <div class="accordion-item-body">
                                         <p>- 본사 한글: 10915 / 경기도 파주시 금빛로 24-21, 6층 604호 주식회사 어플라이</p>
                                         <p>- 본사 영문: 10915 / APLY Inc. / 6F, 24-21, Geumbit-ro, Paju-si, Gyeonggi-do, Republic of Korea</p>
-                                        </p>
+                                        <p>- 본사 전화번호: +82-2-6956-0801</p>
+                                        <p>- 본사 전화번호: +82-31-943-4866</p>
                                     </div>
-                                </div>
+                                </div>                                
                             </div>
                         </div>
                     </div>
