블로그 주소 수정

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <div class="row justify-content-between align-items-center">
             <div class="col-md-5 text-center text-md-left">
               <ul class="nav">
-                <li class="nav-item"><a class="nav-link" href="//blog.naver.com/PostList.naver?blogId=jebo78&categoryNo=38&from=postList" target="_blank">블로그</a></li>
+                <li class="nav-item"><a class="nav-link" href="//blog.naver.com/aply-platform" target="_blank">블로그</a></li>
                 <li class="nav-item"><a class="nav-link" href="#recruit" id="menu_recruit">채용</a></li>
                 <li class="nav-item"><a class="nav-link" href="javascript:showEmailPolicyDialog();">이메일무단수집거부</a></li>
               </ul>
