--- a/contact.html
+++ b/contact.html
@@ -45,8 +45,8 @@
                <div class="col-md-6 py-10 pl-md-10 text-center text-md-left">
                  <i class="icon-question fs-40 text-primary mb-2" data-aos="fade-up" data-aos-delay="50"></i>
                  <h5 class="font-weight-normal">상담 및 문의</h5>
-                 <p class="mb-4" style="word-break:keep-all;">문의 남겨주시면 최대한 빠르게 답변드리겠습니다.</p>
-                 <p style="word-break:keep-all;">분야를 선택한 후 문의 내용을 작성해주세요.</p>
+                 <p class="mb-4" style="word-break:keep-all;">신속하게 검토하여 답신드리겠습니다.</p>
+                 <p style="word-break:keep-all;">분야 선택 후 내용을 작성해주세요.</p>
                  
                  <!-- 문의하기 폼 -->
                  <form role="form" method="post" id="email_up"> 
