--- a/service.html
+++ b/service.html
@@ -103,7 +103,7 @@
              </a>
            </div>
          </div>
-         <div class="row align-items-center justify-content-center">
+         <div class="row align-items-center justify-content-center flex-row-reverse">
            <div class="col-md-5" data-aos="zoom-in" data-aos-anchor-placement="top-center">
             <div class="presentation-circle">
               <figure style="background-image: url('assets/img/service_2.jpg')"></figure>
