--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
                 <div class="container">
                   <div class="row align-items-end justify-content-center vh-80 pb-4">
                     <div class="col-12 col-lg-6 text-center">
-                      <h1 class="display-3 mb-2 font-weight-bold" data-aos="fade-up" data-aos-delay="50">기술을 일상으로</h1>
+                      <h1 class="display-3 mb-2 font-weight-bold" data-aos="fade-up" data-aos-delay="50">Only, Software</h1>
                       <p class="lead mb-8 text-white" style="word-break:keep-all;" data-aos="fade-up" data-aos-delay="100">나의 일상에 어플라이가 함께 합니다.</p>
                       <div class="mouse"></div>
                     </div>
@@ -22,7 +22,7 @@
                 <div class="container">
                   <div class="row align-items-end justify-content-center vh-80 pb-4">
                     <div class="col-12 col-lg-6 text-center">
-                      <h1 class="display-3 mb-2 font-weight-bold">기술을 일상으로</h1>
+                      <h1 class="display-3 mb-2 font-weight-bold">Only, Software</h1>
                       <p class="lead mb-8 text-white" style="word-break:keep-all;">나의 일상에 어플라이가 함께 합니다.</p>
                       <div class="mouse"></div>
                     </div>
@@ -36,7 +36,7 @@
                 <div class="container">
                   <div class="row align-items-end justify-content-center vh-80 pb-4">
                     <div class="col-12 col-lg-6 text-center">
-                      <h1 class="display-3 mb-2 font-weight-bold">기술을 일상으로</h1>
+                      <h1 class="display-3 mb-2 font-weight-bold">Only, Software</h1>
                       <p class="lead mb-8 text-white" style="word-break:keep-all;">나의 일상에 어플라이가 함께 합니다.</p>
                       <div class="mouse"></div>
                     </div>
@@ -50,7 +50,7 @@
                 <div class="container">
                   <div class="row align-items-end justify-content-center vh-80 pb-4">
                     <div class="col-12 col-lg-6 text-center">
-                      <h1 class="display-3 mb-2 font-weight-bold">기술을 일상으로</h1>
+                      <h1 class="display-3 mb-2 font-weight-bold">Only, Software</h1>
                       <p class="lead mb-8 text-white" style="word-break:keep-all;">나의 일상에 어플라이가 함께 합니다.</p>
                       <div class="mouse"></div>
                     </div>
@@ -64,7 +64,7 @@
                 <div class="container">
                   <div class="row align-items-end justify-content-center vh-80 pb-4">
                     <div class="col-12 col-lg-6 text-center">
-                      <h1 class="display-3 mb-2 font-weight-bold">기술을 일상으로</h1>
+                      <h1 class="display-3 mb-2 font-weight-bold">Only, Software</h1>
                       <p class="lead mb-8 text-white" style="word-break:keep-all;">나의 일상에 어플라이가 함께 합니다.</p>
                       <div class="mouse"></div>
                     </div>
@@ -81,7 +81,7 @@
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-md-10 col-lg-8">
-              <h3 class="text-decorated text-decorated-padding">advanced platform to fly,<br />APLY will be the path to the next.</h3>
+              <h3 class="text-decorated text-decorated-padding">APLY will be the path to the next.</h3>
             </div>
           </div>
         </div>
