contact 영역 문구 수정

--- a/main.html
+++ b/main.html
@@ -335,7 +335,7 @@
             <div class="row mb-8">
               <div class="col-12 text-center">
                 <h4><b>상담 및 문의</b></h4>
-                <p class="lead" style="word-break:keep-all;">어플라이의 도움이 필요하세요? <br />분야를 선택한 후 문의 내용을 작성해주세요.</p>
+                <p class="lead" style="word-break:keep-all;">어플라이의 도움이 필요하세요? <br />분야 선택 후 문의 내용을 작성해주세요.</p>
               </div>
             </div>  
             <div class="row justify-content-center mb-2">
