메인화면 문구 수정

--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
                   <div class="row align-items-end justify-content-center vh-80 pb-4">
                     <div class="col-12 col-lg-6 text-center">
                       <h1 class="display-3 mb-2 font-weight-bold" data-aos="fade-up" data-aos-delay="50">Only, Software</h1>
-                      <p class="lead mb-8 text-white" style="word-break:keep-all;" data-aos="fade-up" data-aos-delay="100">나의 일상에 어플라이가 함께 합니다.</p>
+                      <p class="lead mb-8 text-white" style="word-break:keep-all;" data-aos="fade-up" data-aos-delay="100">APLY는 즐겁게 일하는 진보된 플랫폼입니다.</p>
                       <div class="mouse"></div>
                     </div>
                   </div>
@@ -23,7 +23,7 @@
                   <div class="row align-items-end justify-content-center vh-80 pb-4">
                     <div class="col-12 col-lg-6 text-center">
                       <h1 class="display-3 mb-2 font-weight-bold">Only, Software</h1>
-                      <p class="lead mb-8 text-white" style="word-break:keep-all;">나의 일상에 어플라이가 함께 합니다.</p>
+                      <p class="lead mb-8 text-white" style="word-break:keep-all;">APLY는 즐겁게 일하는 진보된 플랫폼입니다.</p>
                       <div class="mouse"></div>
                     </div>
                   </div>
@@ -37,7 +37,7 @@
                   <div class="row align-items-end justify-content-center vh-80 pb-4">
                     <div class="col-12 col-lg-6 text-center">
                       <h1 class="display-3 mb-2 font-weight-bold">Only, Software</h1>
-                      <p class="lead mb-8 text-white" style="word-break:keep-all;">나의 일상에 어플라이가 함께 합니다.</p>
+                      <p class="lead mb-8 text-white" style="word-break:keep-all;">APLY는 즐겁게 일하는 진보된 플랫폼입니다.</p>
                       <div class="mouse"></div>
                     </div>
                   </div>
@@ -51,7 +51,7 @@
                   <div class="row align-items-end justify-content-center vh-80 pb-4">
                     <div class="col-12 col-lg-6 text-center">
                       <h1 class="display-3 mb-2 font-weight-bold">Only, Software</h1>
-                      <p class="lead mb-8 text-white" style="word-break:keep-all;">나의 일상에 어플라이가 함께 합니다.</p>
+                      <p class="lead mb-8 text-white" style="word-break:keep-all;">APLY는 즐겁게 일하는 진보된 플랫폼입니다.</p>
                       <div class="mouse"></div>
                     </div>
                   </div>
@@ -65,7 +65,7 @@
                   <div class="row align-items-end justify-content-center vh-80 pb-4">
                     <div class="col-12 col-lg-6 text-center">
                       <h1 class="display-3 mb-2 font-weight-bold">Only, Software</h1>
-                      <p class="lead mb-8 text-white" style="word-break:keep-all;">나의 일상에 어플라이가 함께 합니다.</p>
+                      <p class="lead mb-8 text-white" style="word-break:keep-all;">APLY는 즐겁게 일하는 진보된 플랫폼입니다.</p>
                       <div class="mouse"></div>
                     </div>
                   </div>
