메인화면 문구 수정

--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
                 <div class="container">
                   <div class="row align-items-end justify-content-center vh-80 pb-4">
                     <div class="col-12 col-lg-6 text-center">
-                      <h1 class="display-3 mb-2 font-weight-bold" data-aos="fade-up" data-aos-delay="50">Only, Software</h1>
+                      <h1 class="display-3 mb-2 font-weight-bold" data-aos="fade-up" data-aos-delay="50">Only, Software.</h1>
                       <p class="lead mb-8 text-white" style="word-break:keep-all;" data-aos="fade-up" data-aos-delay="100">APLY는 즐겁게 일하는 진보된 플랫폼입니다.</p>
                       <div class="mouse"></div>
                     </div>
@@ -22,7 +22,7 @@
                 <div class="container">
                   <div class="row align-items-end justify-content-center vh-80 pb-4">
                     <div class="col-12 col-lg-6 text-center">
-                      <h1 class="display-3 mb-2 font-weight-bold">Only, Software</h1>
+                      <h1 class="display-3 mb-2 font-weight-bold">Only, Software.</h1>
                       <p class="lead mb-8 text-white" style="word-break:keep-all;">APLY는 즐겁게 일하는 진보된 플랫폼입니다.</p>
                       <div class="mouse"></div>
                     </div>
@@ -36,7 +36,7 @@
                 <div class="container">
                   <div class="row align-items-end justify-content-center vh-80 pb-4">
                     <div class="col-12 col-lg-6 text-center">
-                      <h1 class="display-3 mb-2 font-weight-bold">Only, Software</h1>
+                      <h1 class="display-3 mb-2 font-weight-bold">Only, Software.</h1>
                       <p class="lead mb-8 text-white" style="word-break:keep-all;">APLY는 즐겁게 일하는 진보된 플랫폼입니다.</p>
                       <div class="mouse"></div>
                     </div>
@@ -50,7 +50,7 @@
                 <div class="container">
                   <div class="row align-items-end justify-content-center vh-80 pb-4">
                     <div class="col-12 col-lg-6 text-center">
-                      <h1 class="display-3 mb-2 font-weight-bold">Only, Software</h1>
+                      <h1 class="display-3 mb-2 font-weight-bold">Only, Software.</h1>
                       <p class="lead mb-8 text-white" style="word-break:keep-all;">APLY는 즐겁게 일하는 진보된 플랫폼입니다.</p>
                       <div class="mouse"></div>
                     </div>
@@ -64,7 +64,7 @@
                 <div class="container">
                   <div class="row align-items-end justify-content-center vh-80 pb-4">
                     <div class="col-12 col-lg-6 text-center">
-                      <h1 class="display-3 mb-2 font-weight-bold">Only, Software</h1>
+                      <h1 class="display-3 mb-2 font-weight-bold">Only, Software.</h1>
                       <p class="lead mb-8 text-white" style="word-break:keep-all;">APLY는 즐겁게 일하는 진보된 플랫폼입니다.</p>
                       <div class="mouse"></div>
                     </div>
