history 에 lips 추가

--- a/about.html
+++ b/about.html
@@ -53,10 +53,11 @@
                             <span>12월</span><br />
                             AQR 서비스 론칭 1주년, 등록 계좌 정보 3,000개 돌파                            
                           </p>
-                        </div>
+                        </div>                        
                         <div class="accordion-content-wrapper">
                           <p>
-                            <span>11월</span><br />                            
+                            <span>11월</span><br />
+                            LIPS 자금 유치,<br />
                             정은혜 작가 전시회 '해의 시선'배리어 프리 전시 협업
                           </p>
                         </div>
