카탈로그/브로셔 문구 삭제

--- a/main.html
+++ b/main.html
@@ -158,7 +158,7 @@
                 <blockquote class="review">
                   <span class="review-score bg-secondary text-dark rounded-circle fs-24" style="width:3.75rem; line-height:3.75rem;">3</span>
                   <h5 class="mt-1 fs-22">서비스 및 솔루션 기획/디자인/개발</h5>
-                  <p class="mt-1 fs-18">홍보 및 서비스용 웹사이트 개발<br />멀티 플랫폼 SW/FW 개발<br />카탈로그, 브로셔 기획 및 디자인<br /><span class="text-black-50">+ more</span></p>
+                  <p class="mt-1 fs-18">홍보 및 서비스용 웹사이트 개발<br />멀티 플랫폼 SW/FW 개발<br /><span class="text-black-50">+ more</span></p>
                   <hr>
                   <a href="/?p=team"><button type="button" class="btn btn-ico btn-rounded btn-primary"><i class="icon-arrow-right2"></i></button></a>
                 </blockquote>
