ROS2 키워드 추가

--- a/main.html
+++ b/main.html
@@ -143,8 +143,8 @@
               <div class="owl-carousel review-listing" data-items="[2]" data-autoplay="true" data-loop="true">
                 <blockquote class="review">
                   <span class="review-score bg-secondary text-dark rounded-circle fs-24" style="width:3.75rem; line-height:3.75rem;">1</span>
-                  <h5 class="mt-1 fs-22">드론 제어/모니터링 시스템 컨설팅 및 SW 개발</h5>
-                  <p class="mt-1 fs-18">GCS 설계<br />DJI 솔루션 기반 SW<br />PX4, Mavlink 기반 SW<br /><span class="text-black-50">+ more</span></p>
+                  <h5 class="mt-1 fs-22">드론/로봇 제어, 모니터링 시스템 컨설팅 및 SW 개발</h5>
+                  <p class="mt-1 fs-18">GCS 설계<br />DJI 솔루션 기반 SW<br />PX4, Mavlink, ROS2 기반 SW<br /><span class="text-black-50">+ more</span></p>
                   <hr>
                   <a href="/?p=team"><button type="button" class="btn btn-ico btn-rounded btn-primary"><i class="icon-arrow-right2"></i></button></a>
                 </blockquote>
