--- a/team.html
+++ b/team.html
@@ -45,10 +45,10 @@
                </div>
                <div class="col-md-6 py-10 pl-md-10 text-center text-md-left bg-white">
                  <i class="fas fa-file-code fs-40 text-primary mb-2"></i>
-                 <h5 class="font-weight-normal" style="word-break:keep-all;">드론 제어/모니터링 시스템 컨설팅 및 SW 개발</h5>
+                 <h5 class="font-weight-normal" style="word-break:keep-all;">드론/로봇 제어, 모니터링 시스템 컨설팅 및 SW 개발</h5>
                  <p>GCS 설계</p>
                  <p style="word-break:keep-all;">DJI 솔루션 기반 SW (MSDK, PSDK, Cloud API)</p>
-                 <p>PX4, Mavlink 기반 SW</p>
+                 <p>ROS2, PX4, Mavlink 기반 SW</p>
                  <p>QGroundControl 커스터마이징</p>
                  <p style="word-break:keep-all;">증강현실(AR) 기반 드론 제어, 모니터링 SW</p>
                  <p style="word-break:keep-all;">이상탐지 등 AI 기반 드론 영상 분석</p>
