team page updated

--- a/team.html
+++ b/team.html
@@ -139,12 +139,22 @@
                  </li>
                  <li class="col-6">
                    <figure class="photo">
+                     <img src="assets/img/team_portfolio_5.jpg" alt="APLY">
+                   </figure>
+                 </li>
+                 <li class="col-6">
+                   <figure class="photo">
                      <img src="assets/img/team_portfolio_1.jpg" alt="APLY">
                    </figure>
                  </li>
                  <li class="col-6">
                    <figure class="photo">
                      <img src="assets/img/team_portfolio_2.jpg" alt="APLY">
+                   </figure>
+                 </li>
+                 <li class="col-6">
+                   <figure class="photo">
+                     <img src="assets/img/team_portfolio_3.jpg" alt="APLY">
                    </figure>
                  </li>
                </ul>
