--- a/team.html
+++ b/team.html
@@ -142,6 +142,11 @@
                      <img src="assets/img/team_portfolio_4.jpg" alt="APLY">
                    </figure>
                  </li>
+                 <li class="col-6">
+                   <figure class="photo">
+                     <img src="assets/img/team_portfolio_5.jpg" alt="APLY">
+                   </figure>
+                 </li>
                </ul>
              </div>
            </div>          
